Update SDK from latest OpenAPI spec
